--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <form name="calculator" class="box">
     <table class="keys">
       <tr>
-        <td>
+        <td colspan=4>
           <input type="text" readonly size="18" class="display" id="display" disabled>
         </td>
       </tr>
